Closed Bug 1719405 Opened 3 years ago Closed 3 years ago

Thunderbird breaks on the assertion from bug 1717726

Categories

(Core :: Layout, defect)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox89 --- unaffected
firefox90 --- unaffected
firefox91 --- fixed

People

(Reporter: darktrojan, Assigned: darktrojan)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Our tabpanels element has id tabpanelcontainer instead of tabbrowser-tabpanels so it gets caught out here. I'm happy to start another bug and make a patch for it.

Thunderbird's tabpanels element has a different ID from that of Firefox.

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/integration/autoland/rev/701ca0fe4211
Modify the no-browsers-inside-deck assertion for Thunderbird. r=hiro
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch

Set release status flags based on info from the regressing bug 1717726

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: