Bug 1719405 - Modify the no-browsers-inside-deck assertion for Thunderbird. r=hiro

Thunderbird's tabpanels element has a different ID from that of Firefox.

Differential Revision: https://phabricator.services.mozilla.com/D119247